[package]
name = "Cocoon"
version = "2.0.1"
description = "A Tauri App"
authors = ["pesnik"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cocoon_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-clipboard-manager = "2.0.0"
chrono = { version = "0.4.41", features = ["serde"] }
dirs = "6.0.0"
argon2 = "0.5.3"
zeroize = "1.8.1"
aes-gcm = "0.10.3"
tokio = { version = "1.46.1", features = ["full"] }
base64 = "0.22.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"


# Platform-specific dependencies
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser"] }

[target.'cfg(target_os = "macos")'.dependencies]
# core-graphics = "0.22.3"
core-graphics = "0.25.0"
core-foundation = "0.9.3"

[target.'cfg(target_os = "linux")'.dependencies]
x11 = { version = "2.21.0", features = ["xlib"] }

# Desktop-only plugins
# [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
# tauri-plugin-single-instance = "2.0.0"
# tauri-plugin-fs = "2.0.0"
# tauri-plugin-shell = "2.0.0"

[features]
default = ["desktop"]
desktop = []
mobile = []
