[package]
name = "cocoon-password-manager"
version = "0.1.0"
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cocoon_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-clipboard-manager = "2.0"
tauri-plugin-autostart = "2.0"
tauri-plugin-global-shortcut = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"

# Security dependencies
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.22"
tauri-plugin-opener = "2"
tokio = { version = "1.46.1", features = ["full"] }
lazy_static = "1.5.0"

# Platform-specific dependencies
[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-foundation = "0.2"
objc2-app-kit = {version = "0.3.1", features = ["NSWindow"] }
core-graphics = "0.23"

[target.'cfg(target_os = "linux")'.dependencies]
x11 = { version = "2.21", features = ["xlib"] }

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
